[metadata]
name = linuxforhealth-{library name}
version = attr: linuxforhealth.{library name}.__version__
description = LinuxForHealth {library name}
long_description: file: README.md
long_description_content_type = text/markdown
license: Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Healthcare Industry
    Intended Audience :: Developers

[options]
include_package_data = True
install_requires =
package_dir=
    =src
packages=find_namespace:
python_requires = >= 3.8
zip_safe = False

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    black = black:patched_main

[options.extras_require]
dev = black>=21.8b0; pre-commit>=2.14.1;pytest>=6.2.5